--- a/news.html
+++ b/news.html
@@ -77,7 +77,7 @@
         <div class="row">
 
           <div class="twelve columns">
-            <h2>COMPANY INFO</h2>
+            <h2>NEWS</h2>
           </div>
 
         </div>
